<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app_name_inapp">The Cat In the Hat Apps</string>

    <string name="bt1">The Cat</string>
    <string name="bt21">Thing 1</string>
    <string name="bt22">Thing 2</string>
    <string name="bt3">Thingamajigger</string>
    <string name="bt4">Sally</string>
    <string name="bt5">Nick</string>
    <string name="bt6">Dr. Seuss</string>

</resources>
